--- a/typesafe_builder_derive/Cargo.toml
+++ b/typesafe_builder_derive/Cargo.toml
@@ -2,6 +2,12 @@
 name = "typesafe_builder_derive"
 version = "0.1.0"
 edition = "2024"
+authors = ["tomoikey"]
+readme = "README.md"
+repository = "https://github.com/tomoikey/typesafe_builder"
+categories = ["accessibility", "development-tools", "rust-patterns"]
+license = "MIT"
+description = "A procedural macro to generate type-safe builder patterns for Rust structs"
 
 [lib]
 proc-macro = true
