--- a/typesafe_builder_derive/Cargo.toml
+++ b/typesafe_builder_derive/Cargo.toml
@@ -16,6 +16,7 @@ proc-macro = true
 syn = { version = "2", features = ["full"] }
 quote = "1"
 darling = "0.20"
+proc-macro2 = "1"
 
 [dev-dependencies]
 trybuild = "1.0.105"
